--- a/index.html
+++ b/index.html
@@ -28,6 +28,18 @@
           <a href="#" class="logo">
               <img src="./img/general/logoserie.png" alt="" >
           </a>
+          
+<!-- interruptor -->
+<input type="checkbox" id="nav-toggle" class="nav-toggle" hidden>
+
+<!-- ÚNICO botón hamburguesa / flecha -->
+<label for="nav-toggle"
+       class="burger"
+       aria-label="Abrir / cerrar menú">
+  <span></span><span></span><span></span>
+</label>
+
+  </label>
           <ul class="headerBotones" >
               <li>
                 <a href="#">
